changed header color, added media queries to fix header crowding on small screens, made main header a link to index.html, added padding to visit app buttons

--- a/css/main.css
+++ b/css/main.css
@@ -15,46 +15,63 @@
 .navbar-brand {
      font-family: 'Source Sans Pro', sans-serif;
      font-size: 24px;
-     color: white;
+     color: black;     
+}
+
+.navbar-brand:hover {
+    box-shadow: 0 0 8px 2px black;
 }
 
 .navbar-header > a {
-    color: white;    
+    color: black;    
 }
 
-.navbar-header > a:hover {
+/*.navbar-header > a:hover {
     background-color: gray;
     
-}
+}*/
 
 .navbar-nav {
     float: right;
     font-family: 'Source Sans Pro', sans-serif;
-      
+         
 }
 
-.dropdown {    
-    margin-right: 5.1em;
+
+.dropdown:hover {    
+    box-shadow: 0 0 8px 2px black;
+}
+
+.resume-nav:hover {
+    background-color: transparent;   
+    box-shadow: 0 0 8px 2px black;
 }
 
 .navbar-nav>li>a {    
     font-size: 24px;
-    color: white;    
+    color: black;    
 }
 
-.navbar-nav>li>a:hover {    
+/*.navbar-nav>li>a:hover {    
     background-color: gray;  
-}
+}*/
 
 
 
 /*Header*/
 
 header {
-    background: #000000; 
+/*    background: #000000; 
     background: -webkit-linear-gradient(to top, #000000 , #434343); 
-    background: linear-gradient(to top, #000000 , #434343); 
+    background: linear-gradient(to top, #000000 , #434343); */
     padding-bottom: 5em;
+
+
+
+background: #757F9A; 
+background: -webkit-linear-gradient(to top, #757F9A , #D7DDE8); 
+background: linear-gradient(to top, #757F9A , #D7DDE8); 
+        
 }
 
 
@@ -63,10 +80,23 @@ header {
     border: none;
 }
 
+.page-header > h2 {
+    color: black;
+}
+
+.page-header > h3 {
+    color: black;
+}
+
 #header {
     margin-top: 5em;
     text-align: center;
 
+}
+
+.page-header-name > a {
+    color: black;
+    text-decoration: none;
 }
 
 
@@ -150,7 +180,17 @@ p {
     text-align: center;
 }
 
-/*Footer*/
+#chances-description, #chances-death-description, #old-news-description {
+    padding-bottom: 3em;
+}
+
+.resume {
+    display: none;
+}
+
+
+
+/*Footer Styles*/
 
 footer {
     
@@ -169,6 +209,9 @@ footer {
     text-align: center;
         
 }
+
+
+
 
 
 .footer-copyright {
@@ -277,6 +320,24 @@ img {
 @media screen and (max-width: 768px) {
     .navbar-brand {
         display: none;
+    }
+
+    .navbar-nav {
+        display: none;
+    }
+
+    .resume {
+        display: block;
+        padding-top: 2em;
+
+    }
+
+    .resume > a {
+        color: white;
+    }
+
+    .resume > a:hover {
+        color: blue;
     }
 
 }
